# alacritty-apply

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
src/: args.rs  flatten.rs  main.rs
