[package]
name = "alacritty-apply"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
thiserror = "1.0.44"
toml = "0.7.6"
lexopt = "0.3.0"

[[bin]]
name = "alap"
path = "src/main.rs"
